# personnel_management

./: README.md  TASK1.doc
qt_task1/: CMakeLists.txt  data.json
qt_task1/img/: img.qrc
qt_task1/qml/: DDialog.qml  DataEntry.qml  main.qml  qml.qrc
qt_task1/src/: hourly.cpp  hourly.h  listmodel.cpp  listmodel.h  main.cpp  monthly.cpp  monthly.h  person.cpp  person.h  sales.cpp  sales.h
